# TrackingPTZ

./: CMakeLists.txt  README.md
include/: PTZController.h
src/: main_vot.cpp
src_kcf/: kcf.cpp
